--- a/frameworks/DotNetLearning/appsettings.json
+++ b/frameworks/DotNetLearning/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db": "Host=localhost; Database=dotnet-learning-db; Username=postgres; Password=542106"
+    "db": "Data Source=dotnetlearningdb"
   },
   "Logging": {
     "LogLevel": {
