--- a/frameworks/angular/learn-angular/json_server/package.json
+++ b/frameworks/angular/learn-angular/json_server/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "json_server": "file:",
     "json-server": "^1.0.0-beta.3"
   }
 }
