--- a/setups/spring-study/src/main/resources/application.properties
+++ b/setups/spring-study/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+
+#Dev
+debug=false
