--- a/.github/workflows/maven-algo.yml
+++ b/.github/workflows/maven-algo.yml
@@ -6,24 +6,24 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: maven-algo
+# name: maven-algo
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+#   workflow_dispatch:
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 22
-      uses: actions/setup-java@v3
-      with:
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Set up JDK 22
+#       uses: actions/setup-java@v3
+#       with:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
