frameworks-dotnet: Simple feature flags management.

--- a/frameworks/DotNetLearning/appsettings.json
+++ b/frameworks/DotNetLearning/appsettings.json
@@ -8,5 +8,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FeatureManagement": {
+    "CutText": true,
+    "ShowSomething": {
+      "EnabledFor": [
+        {
+          "Name": "Percentage",
+          "Parameters": {
+            "Value": 50
+          }
+        }
+      ]
+    }  
+  }
 }
