frameworks-dotnet: Brief description about configuration files.

--- a/frameworks/DotNetLearning/Properties/launchSettings.json
+++ b/frameworks/DotNetLearning/Properties/launchSettings.json
@@ -36,6 +36,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
+    },
+      "custom": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5165",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Custom"
+      }
+    },
   }
 }
